# bildstod

./: .gitignore  README.md  bildstod_0.2.0-2_all.deb  messages.mo  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml
.tx/: config
data/: se.danielnylander.bildstod.desktop  se.danielnylander.bildstod.metainfo.xml
data/man/: bildstod.1
po/: README.md  bildstod.pot  sv.po
po/locale/sv/LC_MESSAGES/: bildstod.mo
src/: __main__.py
src/bildstod/: __main__.py  accessibility.py  arasaac.py  export.py  library.py  main.py  now_view.py  offline_cache.py  schedule.py  templates.py  timer.py
src/bildstod/locale/sv/LC_MESSAGES/: bildstod.mo
