[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bildstod"
version = "0.3.0"
description = "Visual schedule and picture support tool with ARASAAC integration"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"

[project.gui-scripts]
bildstod = "bildstod.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]
